syntax = "proto3";

package monad_proto.block;

import "basic.proto";
import "quorum_certificate.proto";
import "state_root_hash.proto";

message ProtoExecutionProtocol {
  bytes delayed_execution_result = 1;
  monad_proto.basic.ProtoSeqNum seq_num = 2;
  bytes beneficiary = 3;
  bytes randao_reveal = 4;
}

message ProtoPayload {
  bytes txns = 1;
}

message ProtoBlock {
  monad_proto.basic.ProtoNodeId author = 1;
  monad_proto.basic.ProtoEpoch epoch = 2;
  monad_proto.basic.ProtoRound round = 3;
  ProtoExecutionProtocol execution = 4;
  monad_proto.basic.ProtoPayloadId payload_id = 5;
  monad_proto.quorum_certificate.ProtoQuorumCertificate qc = 6;
  uint64 timestamp = 7;
}

message ProtoFullBlock {
    ProtoBlock block = 1;
    ProtoPayload payload = 2;
}
